add footer with a "logo"

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
     <h1 id="showssid"></h1>
     <div id="qrcode"></div>
+    <div id="footer"><img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a></div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="jquery-qrcode/jquery.qrcode.min.js"></script>
     <script type="text/javascript">
