--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </p>
         <p>
         Don't trust your browser either? Just pipe the string
-        <pre>WIFI:S:&lt;SSID&gt;;T:&lt;WPA|WEP|&gt;;P:&lt;password&gt;;;</pre>
+        <code>WIFI:S:&lt;SSID&gt;;T:&lt;WPA|WEP|&gt;;P:&lt;password&gt;;;</code>
         through the QR code generator of your choice after <a href="http://code.google.com/p/zxing/wiki/BarcodeContents#Wifi_Network_config_(Android)">reading the documentation</a>.
         </p>
     </div>
