--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" type="text/css" media="all" href="style.css">
     <link rel="stylesheet" type="text/css" media="print" href="print.css">
+    <link rel="stylesheet" href="github-fork-ribbon-css/gh-fork-ribbon.css" />
+    <!--[if IE]>
+        <link rel="stylesheet" href="github-fork-ribbon-css/gh-fork-ribbon.ie.css" />
+    <![endif]-->
 </head>
 <body>
     <h1 id="title">pure JS WiFi QR Code Generator</h1>
@@ -48,6 +52,11 @@
     <h1 id="showssid"></h1>
     <div id="qrcode"></div>
     <div id="footer"><img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a></div>
+    <div class="github-fork-ribbon-wrapper right">
+        <div class="github-fork-ribbon">
+            <a href="https://github.com/evgeni/qifi">Fork me on GitHub</a>
+        </div>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="jquery-qrcode/jquery.qrcode.min.js"></script>
     <script type="text/javascript">
