do not print the ribbon

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 id="showssid"></h1>
     <div id="qrcode"></div>
     <div id="footer"><img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a></div>
-    <div class="github-fork-ribbon-wrapper right">
+    <div id="github" class="github-fork-ribbon-wrapper right">
         <div class="github-fork-ribbon">
             <a href="https://github.com/evgeni/qifi">Fork me on GitHub</a>
         </div>
