load jQuery from a protocol-agnostic URL

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="https://github.com/evgeni/qifi">Fork me on GitHub</a>
         </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="jquery-qrcode/jquery.qrcode.min.js"></script>
     <script type="text/javascript">
         function escape_string (string) {
