--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
     </form>
     <h1 id="showssid"></h1>
     <div id="qrcode"></div>
-    <div id="footer"><img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a></div>
+    <div id="footer">
+        <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br />
+        <a href="http://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
+        <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+    </div>
     <div id="github" class="github-fork-ribbon-wrapper right">
         <div class="github-fork-ribbon">
             <a href="https://github.com/evgeni/qifi">Fork me on GitHub</a>
