load the flattr image without a protocol

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="footer">
         <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br />
         <a href="http://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
-        <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+        <img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
     </div>
     <div id="github" class="github-fork-ribbon-wrapper right">
         <div class="github-fork-ribbon">
