properly sized tooltips, please

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="ssid">SSID:</label><br/>
         <input name="ssid" id="ssid" required/><br/>
         
-        <label for="hidden">Hidden:</label>
+        <label class="tooltip-label" for="hidden">Hidden:</label>
         <span  class="tooltip" data-tooltip="Is your SSID hidden?"><input type="checkbox" name="hidden" id="hidden"/></span>
         </p>
         <p>
@@ -42,7 +42,7 @@
         <label for="key" id="key-label">Key:</label><br/>
         <input name="key" id="key" type="password" required/><br/>
 
-        <label for="display-key">display key:</label>
+        <label class="tooltip-label" for="display-key">display key:</label>
         <span class="tooltip" data-tooltip="Should the key be displayed in plain-text here? The QR code will always contain the key in plain-text!"><input type="checkbox" name="display-key" id="display-key"/></span>
         </p>
         <p>
