--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
     <section id="contact">
         <div class="page-header"><h1>Contact</h1></div>
-        <p>QiFi was written by <a href="https://www.die-welt.net">Evgeni Golov</a>, using <a href="http://jquery.com/">jQuery</a>, <a href+"http://jeromeetienne.github.com/jquery-qrcode/">jQuery QRCode</a> and <a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a>.</p>
+        <p>QiFi was written by <a href="https://www.die-welt.net">Evgeni Golov</a>, using <a href="http://jquery.com/">jQuery</a>, <a href="http://jeromeetienne.github.com/jquery-qrcode/">jQuery QRCode</a> and <a href="http://twitter.github.com/bootstrap">Twitter Bootstrap</a>.</p>
         <p>If you have any comments, suggestions, bugs or complaints: please write to: <a href="mailto:evgeni+qifi@golov.de">evgeni+qifi@golov.de</a></p>
     </section>
     <div id="github" class="github-fork-ribbon-wrapper right">
