add a (short) list of supported scanners

--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
         <code>WIFI:S:&lt;SSID&gt;;T:&lt;WPA|WEP|&gt;;P:&lt;password&gt;;;</code>
         through the QR code generator of your choice after <a href="http://code.google.com/p/zxing/wiki/BarcodeContents#Wifi_Network_config_(Android)">reading the documentation</a>.
         </p>
+
+        <h2>Supported Scanners</h2>
+        <p>
+        <ul>
+        <li>
+            <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android">Barcode Scanner</a> from ZXing
+        </li>
+        <li>
+            Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>
+        </li>
+        <li>
+            <a href="https://itunes.apple.com/app/qr-reader-for-iphone/id368494609">QR Reader for iPhone</a> from TapMedia. Please note: Due to iOS design, Apps cannot modify WiFi settings directly and you'll have to copy&amp;paste the details. The only alternative would be downloading a mobile profile from the Internet, but that would mean leaking your credentials to a third-party.
+        </li>
+        </ul>
+        </p>
     </section>
     <section id="contact">
         <div class="page-header"><h1>Contact</h1></div>
