fix padding of anchor headers

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="qrcode"></div>
     </section>
     <section id="about">
-        <div class="page-header"><h1>About</h1></div>
+        <div class="page-header"><h1 class="anchor">About</h1></div>
         <p>
         Ever wanted to create a cool QR code for your guests? But never wanted to type in your WiFi credentials into a form that submits them to a remote webserver to render the QR code? <i>QiFi</i> for the rescue! It will render the code in your browser, on your machine, so the WiFi stays as secure as it was before (read the code if you do not trust text on the internet :-))!
         </p>
@@ -118,7 +118,7 @@
         </ul>
     </section>
     <section id="contact">
-        <div class="page-header"><h1>Contact</h1></div>
+        <div class="page-header"><h1 class="anchor">Contact</h1></div>
         <p>QiFi was written by <a href="https://www.die-welt.net">Evgeni Golov</a>, using <a href="http://jquery.com/">jQuery</a>, <a href="http://jeromeetienne.github.io/jquery-qrcode/">jQuery QRCode</a>, <a href="http://yckart.github.io/jquery.storage.js/">jQuery Storage</a> and <a href="http://twitter.github.io/bootstrap">Twitter Bootstrap</a>.</p>
         <p>If you have any comments, suggestions, bugs or complaints: please write to: <a href="mailto:evgeni+qifi@golov.de">evgeni+qifi@golov.de</a></p>
     </section>
