--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>
         </p>
         <p>
+            <a href="http://maemo.org/packages/view/mbarcode/">mbarcode</a> with the <a href="http://maemo.org/packages/view/mbarcode-plugin-wifi/">mbarcode wifi plugin</a> on Maemo 5.
+        </p>
+        <p>
             <a href="https://itunes.apple.com/app/qr-reader-for-iphone/id368494609">QR Reader for iPhone</a> from TapMedia. Please note: Due to iOS design, Apps cannot modify WiFi settings directly and you'll have to copy&amp;paste the details. The only alternative would be downloading a mobile profile from the Internet, but that would mean leaking your credentials to a third-party.
         </p>
         <p>
