--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 
         <h2>Supported Scanners</h2>
         <p>
-            <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android">Barcode Scanner</a> from ZXing
+            <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android">Barcode Scanner</a> from ZXing.
         </p>
         <p>
-            Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>
+            Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>.
         </p>
         <p>
             <a href="http://maemo.org/packages/view/mbarcode/">mbarcode</a> with the <a href="http://maemo.org/packages/view/mbarcode-plugin-wifi/">mbarcode wifi plugin</a> on Maemo 5.
@@ -121,7 +121,7 @@
     <section id="contact">
         <div class="page-header"><h1 class="anchor">Contact</h1></div>
         <p>QiFi was written by <a href="https://www.die-welt.net">Evgeni Golov</a>, using <a href="http://jquery.com/">jQuery</a>, <a href="http://jeromeetienne.github.io/jquery-qrcode/">jQuery QRCode</a>, <a href="http://yckart.github.io/jquery.storage.js/">jQuery Storage</a> and <a href="http://twitter.github.io/bootstrap">Twitter Bootstrap</a>.</p>
-        <p>If you have any comments, suggestions, bugs or complaints: please write to: <a href="mailto:evgeni+qifi@golov.de">evgeni+qifi@golov.de</a></p>
+        <p>If you have any comments, suggestions, bugs or complaints: please write to: <a href="mailto:evgeni+qifi@golov.de">evgeni+qifi@golov.de</a>.</p>
     </section>
     <div id="github" class="github-fork-ribbon-wrapper right fixed">
         <div class="github-fork-ribbon">
