--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </p>
         <p>
         <button id="generate" class="btn btn-primary">Generate!</button>
-        <button id="save" type="button" class="btn">Save!</button>
+        <button id="save" type="button" class="btn" data-toggle="tooltip" title="Save the credentials for the WiFi in HTML5 localStorage for later use.">Save!</button>
         </p>
     </form>
     <h1 id="showssid"></h1>
@@ -256,7 +256,7 @@
                 }
             });
             $('#form').tooltip({
-                selector: "input[data-toggle=tooltip]"
+                selector: "[data-toggle=tooltip]"
             });
             loadhistory();
         });
