--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <p>
         <button id="generate" class="btn btn-primary">Generate!</button>
         <button id="save" type="button" class="btn" data-toggle="tooltip" title="Save the credentials for the WiFi in HTML5 localStorage for later use.">Save!</button>
+        <a href="#" id="export" class="btn" target="_blank" data-toggle="tooltip" title="Export the QR code as a PNG.">Export!</a>
         </p>
     </form>
     <h1 id="showssid"></h1>
@@ -174,6 +175,16 @@
             $('#qrcode').qrcode(qrstring);
             $('#showssid').text('SSID: '+ssid);
             $('#save').show();
+
+            var canvas = $('#qrcode canvas');
+            if (canvas.length == 1) {
+                var data = canvas[0].toDataURL('image/png');
+                var e = $('#export');
+                e.attr('href', data);
+                e.attr('download', ssid+'-qrcode.png');
+                // e.show() sets display:inline, but we need inline-block
+                e.css('display', 'inline-block');
+            }
         };
 
         function save () {
