update link to zxing documentation, thanks @MailYouLater

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p>
         Don't trust your browser either? Just pipe the string
         <code>WIFI:S:&lt;SSID&gt;;T:&lt;WPA|WEP|&gt;;P:&lt;password&gt;;;</code>
-        through the QR code generator of your choice after <a href="http://code.google.com/p/zxing/wiki/BarcodeContents#Wifi_Network_config_(Android)">reading the documentation</a>.
+        through the QR code generator of your choice after <a href="https://github.com/zxing/zxing/wiki/Barcode-Contents#wifi-network-config-android">reading the documentation</a>.
         </p>
 
         <h2>Supported Scanners</h2>
