--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <a href="http://maemo.org/packages/view/mbarcode/">mbarcode</a> with the <a href="http://maemo.org/packages/view/mbarcode-plugin-wifi/">mbarcode wifi plugin</a> on Maemo 5.
         </p>
         <p>
-            <a href="https://itunes.apple.com/app/qr-reader-for-iphone/id368494609">QR Reader for iPhone</a> from TapMedia. Please note: Due to iOS design, Apps cannot modify WiFi settings directly and you'll have to copy&amp;paste the details. The only alternative would be downloading a mobile profile from the Internet, but that would mean leaking your credentials to a third-party.
+            <a href="https://itunes.apple.com/app/qr-reader-for-iphone/id368494609">QR Reader for iPhone</a> from TapMedia and <a href="https://itunes.apple.com/in/app/avira-insight-qr-code-scanner/id1151086651">Avira Insight QR Code Scanner</a> by Avira Holding GmbH &amp; Co. KG. Please note: Due to iOS design, Apps cannot modify WiFi settings directly and you'll have to copy&amp;paste the details. The only alternative would be downloading a mobile profile from the Internet, but that would mean leaking your credentials to a third-party.
         </p>
         <p>
             Every other QR scanner out there should be able to scan the code too, but probably won't interpret it as intended. If your scanner supports WiFi QR codes, please send me a mail!
