--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
             var ssid = $('#ssid').val();
             var hidden = $('#hidden').is(':checked');
             var enc = $('#enc').val();
-            var key = $('#key').val();
+            if (enc != 'nopass') {
+                var key = $('#key').val();
+            } else {
+                var key = '';
+            }
             // http://code.google.com/p/zxing/wiki/BarcodeContents#Wifi_Network_config_(Android)
             var qrstring = 'WIFI:S:'+escape_string(ssid)+';T:'+enc+';P:'+escape_string(key)+';';
             if (hidden) {
