https for flattr

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     <footer class="footer">
       <div class="container">
         <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br />
-        <a href="http://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
-        <img src="//api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+        <a href="https://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
+        <img src="https://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
       </div>
     </footer>
     <script src="jquery/jquery-3.2.1.min.js"></script>
