--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">QiFi</a>
         </div>
@@ -58,10 +55,10 @@
     <form id="form">
         <p>
         <label for="ssid">SSID:</label>
-        <input name="ssid" id="ssid" type="text" required/><br/>
+        <input name="ssid" id="ssid" type="text" required><br/>
         
         <label class="pull-left" for="hidden">Hidden:</label>
-        <input type="checkbox" name="hidden" id="hidden" data-toggle="tooltip" title="Is your SSID hidden?" />
+        <input type="checkbox" name="hidden" id="hidden" data-toggle="tooltip" title="Is your SSID hidden?">
         </p>
         <p>
         <label for="enc">Encryption:</label>
@@ -73,10 +70,10 @@
         </p>
         <p id="key-p">
         <label for="key" id="key-label">Key:</label>
-        <input name="key" id="key" type="password" required/><br/>
+        <input name="key" id="key" type="password" required><br/>
 
         <label class="pull-left" for="display-key">display key:</label>
-        <input type="checkbox" name="display-key" id="display-key" data-toggle="tooltip" title="Should the key be displayed in plain-text here? The QR code will always contain the key in plain-text!"/>
+        <input type="checkbox" name="display-key" id="display-key" data-toggle="tooltip" title="Should the key be displayed in plain-text here? The QR code will always contain the key in plain-text!">
         </p>
         <p>
         <button id="generate" class="btn btn-primary">Generate!</button>
