--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="pure JS WiFi QR Code Generator">
+    <meta name="author" content="Evgeni Golov">
+    <meta name="flattr:id" content="menw3k">
     <title>pure JS WiFi QR Code Generator</title>
     <link rel="stylesheet" type="text/css" media="all" href="style.css">
     <link rel="stylesheet" type="text/css" media="all" href="style-responsive.css">
@@ -81,8 +82,8 @@
         <a href="#" id="export" class="btn" target="_blank" data-toggle="tooltip" title="Export the QR code as a PNG.">Export!</a>
         </p>
     </form>
-    <h1 id="showssid"></h1>
-    <h1 id="showkey"></h1>
+    <h1 id="showssid">SSID: none</h1>
+    <h1 id="showkey">WPA: none</h1>
     <div id="qrcode"></div>
     </section>
     <section id="about">
@@ -134,7 +135,7 @@
       <div class="container">
         <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br />
         <a href="https://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
-        <img src="https://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
+        <img src="https://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a>
       </div>
     </footer>
     <script src="jquery/jquery-3.2.1.min.js"></script>
