--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">QiFi</a>
         </div>
@@ -54,33 +57,46 @@
     <div class="page-header"><h1 id="title">pure JS WiFi QR Code Generator</h1></div>
     <div id="history"></div>
     <form id="form">
-        <p>
-        <label for="ssid">SSID:</label>
-        <input name="ssid" id="ssid" type="text" required><br/>
-        
-        <label class="pull-left" for="hidden">Hidden:</label>
-        <input type="checkbox" name="hidden" id="hidden" data-toggle="tooltip" title="Is your SSID hidden?">
-        </p>
-        <p>
-        <label for="enc">Encryption:</label>
-        <select name="enc" id="enc">
-            <option value="WPA">WPA/WPA2</option>
-            <option value="WEP">WEP</option>
-            <option value="nopass">None</option>
-        </select>
-        </p>
-        <p id="key-p">
-        <label for="key" id="key-label">Key:</label>
-        <input name="key" id="key" type="password" required><br/>
+        <div class="form-group has-feedback">
+            <label for="ssid" class="control-label">SSID</label>
+            <div class="input-group">
+                <span id="basic-addon-ssid" class="input-group-addon"><i class="glyphicon glyphicon-signal"></i></span>
+                <input type="text" id="ssid" name="ssid" class="form-control" placeholder="SSID" aria-describedby="basic-addon-ssid" required>
+            </div>
+        </div>
 
-        <label class="pull-left" for="display-key">display key:</label>
-        <input type="checkbox" name="display-key" id="display-key" data-toggle="tooltip" title="Should the key be displayed in plain-text here? The QR code will always contain the key in plain-text!">
-        </p>
-        <p>
-        <button id="generate" class="btn btn-primary">Generate!</button>
-        <button id="save" type="button" class="btn" data-toggle="tooltip" title="Save the credentials for the WiFi in HTML5 localStorage for later use.">Save!</button>
-        <a href="#" id="export" class="btn" target="_blank" data-toggle="tooltip" title="Export the QR code as a PNG.">Export!</a>
-        </p>
+        <div class="form-group">
+            <label class="pull-left control-label" for="hidden">Hidden</label>
+            <div class="input-group">
+                <input type="checkbox" name="hidden" id="hidden" data-toggle="tooltip" title="Is your SSID hidden?">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="enc" class="control-label">Encryption</label>
+            <div class="input-group">
+                <select name="enc" id="enc" class="form-control">
+                    <option value="WPA">WPA/WPA2</option>
+                    <option value="WEP">WEP</option>
+                    <option value="nopass">None</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group has-feedback" id="key-p">
+            <label class="control-label">Key</label>
+            <div class="input-group">
+                <span id="basic-addon1" class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                <input type="password" id="key" name="key" class="form-control" placeholder="key" aria-describedby="basic-addon1" required>
+                <span class="input-group-btn"><button class="btn btn-default" type="button" id="display-key"><i class="glyphicon glyphicon-eye-open" id="display-key-icon"></i></button></span>
+           </div>
+        </div>
+
+        <div class="form-group">
+            <button id="generate" class="btn btn-primary">Generate!</button>
+            <button id="save" type="button" class="btn" data-toggle="tooltip" title="Save the credentials for the WiFi in HTML5 localStorage for later use.">Save!</button>
+            <a href="#" id="export" class="btn" target="_blank" data-toggle="tooltip" title="Export the QR code as a PNG.">Export!</a>
+        </div>
     </form>
     <h1 id="showssid">SSID: none</h1>
     <h1 id="showkey">WPA: none</h1>
@@ -160,7 +176,7 @@
             }
             return output;
         };
-        
+
         function generate () {
             var ssid = $('#ssid').val();
             var hidden = $('#hidden').is(':checked');
@@ -255,12 +271,14 @@
             $('#save').click(function() {
                 save();
             });
-            $('#display-key').change(function() {
-                if ($(this).is(':checked')) {
-                    $('#key').attr('type', 'text');
-                }
-                else {
-                    $('#key').attr('type', 'password');
+            $('#display-key').click(function() {
+                var $key = $("#key");
+                if ($key.attr('type') === 'password') {
+                    $key.attr('type', 'text');
+                    $("#display-key-icon").attr("class", "glyphicon glyphicon-eye-close");
+                } else {
+                    $key.attr('type', 'password');
+                    $("#display-key-icon").attr("class", "glyphicon glyphicon-eye-open");
                 }
             });
             $('#enc').change(function() {
