add neoreader, thanks Juan!

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android">Barcode Scanner</a> from ZXing.
         </p>
         <p>
+            <a href="https://play.google.com/store/apps/details?id=de.gavitec.android">NeoReader</a>.
+        </p>
+        <p>
             Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>.
         </p>
         <h3>Maemo</h3>
