--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <p>QiFi was written by <a href="https://www.die-welt.net">Evgeni Golov</a>, using <a href="http://jquery.com/">jQuery</a>, <a href="http://jeromeetienne.github.io/jquery-qrcode/">jQuery QRCode</a>, <a href="http://yckart.github.io/jquery.storage.js/">jQuery Storage</a> and <a href="http://twitter.github.io/bootstrap">Twitter Bootstrap</a>.</p>
         <p>If you have any comments, suggestions, bugs or complaints: please write to: <a href="mailto:evgeni+qifi@golov.de">evgeni+qifi@golov.de</a>.</p>
     </section>
-    <a class="github-fork-ribbon right-top fixed" href="https://github.com/evgeni/qifi" title="Fork me on GitHub">Fork me on GitHub</a>
+    <a class="github-fork-ribbon right-top fixed" href="https://github.com/evgeni/qifi" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     </div>
     <footer class="footer">
       <div class="container">
