--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
             <a href="https://play.google.com/store/apps/details?id=de.gavitec.android">NeoReader</a>.
         </p>
         <p>
+            Huawei phones have a QR code scanner in HiVision mode. This mode has an eye-shaped icon and can be lauched from the lock screen by swiping up or from the camera.
+        <p>
             Every other Android Barcode Scanner based on the <a href="https://code.google.com/p/zxing/">ZXing library</a>.
         </p>
         <h3>Maemo</h3>
