--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br />
-        <a href="https://flattr.com/thing/1191625/qifi-pure-JS-WiFi-QR-Code-Generator" target="_blank">
-        <img src="https://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this"></a>
+        <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a>
       </div>
     </footer>
     <script src="jquery/jquery-3.3.1.min.js"></script>
