add trademark info

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a>
+        <img src="qifi.png" alt="qifi logo"/> by <a href="https://github.com/evgeni">@evgeni</a><br/>
+        <span style="color: #999999;">QR Code is a registered trademark of DENSO WAVE INCORPORATED in the United States and other countries.</span>
       </div>
     </footer>
     <script src="jquery/jquery-3.3.1.min.js"></script>
