--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="qifi.png" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
 
-    <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="all" href="bootstrap/dist/css/bootstrap.min.css">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
