update jquery to 3.5.1 and use slim version

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <span style="color: #999999;">QR Code is a registered trademark of DENSO WAVE INCORPORATED in the United States and other countries.</span>
       </div>
     </footer>
-    <script src="jquery/jquery-3.3.1.min.js"></script>
+    <script src="jquery/jquery-3.5.1.slim.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="jquery-qrcode/jquery.qrcode.min.js"></script>
     <script src="jquery.storage.js/jquery.storage.js"></script>
